--- a/src/components/result/styles.module.scss
+++ b/src/components/result/styles.module.scss
@@ -24,6 +24,8 @@ li.result{
         display: flex;
         gap: 1rem;
         img{
+            width: 140px;
+            height: 100px;
             object-fit: cover;
         }
 
