Align label with input and placeholder

--- a/src/components/form/tips/styles.module.scss
+++ b/src/components/form/tips/styles.module.scss
@@ -7,6 +7,10 @@ form.tips{
         display: flex;
         flex-direction: column;
         gap: 5px;
+
+        span{
+            margin-left: 1rem;
+        }
     }
 
     button{
