--- a/src/components/form/details/styles.module.scss
+++ b/src/components/form/details/styles.module.scss
@@ -3,10 +3,14 @@ form.details{
     flex-direction: column;
     gap: 20px;
 
-    Label{
+    label{
         display: flex;
         flex-direction: column;
         gap: 5px;
+
+        span{
+            margin-left: 1rem;
+        }
 
         &:has(input:not(:valid)){
             color: red;
