--- a/src/components/form/tips/styles.module.scss
+++ b/src/components/form/tips/styles.module.scss
@@ -3,7 +3,7 @@ form.tips{
     flex-direction: column;
     gap: 20px;
 
-    Label{
+    label{
         display: flex;
         flex-direction: column;
         gap: 5px;
